[project]
name = "llm-arena-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zachary Yocum", email = "zachary.yocum@me.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "marimo>=0.10.9",
    "polars>=1.19.0",
]
